# BrainTumors-LaserAblation

./: .gitignore  FreeSurferColorLUT.txt  README.md  laser_checkpoint_1.pth  pyproject.toml
ExtractTumors/: extract_tumors.py
FastSurfer_run/: fast_surfer_batch.py  license.txt  run.sh
LaserAblation/: cnn.py  laser_ablation_transforms.py  test.py  train.py  utils.py
SelfSupervisedLearning/: 2d_mock.py  hello_world.py
TestMonAITransforms/: test_transform_scratchpad.py
Transforms/: utils.py
Transforms/BuildRewardFields/: build_reward_fields.py
Transforms/ExtractBrainAndSkull/: extract_brain_and_skull.py
Transforms/LoadIXIFreeSurferPair/: find_ixi_pairs_v1.py  load_ixi_freesurfer_pair.py
Transforms/RandomTumorInfiltrate/: random_tumor_infiltrate.py
Transforms/RelabelFreeSurfer/: free_surfer_relabel.json  relabel_transform.py
Transforms/TumorAndStructureSegment/: tumor_and_structure_segment.py
TumorDisplaceMaps/: displacement_map.py
UNet/: config.json  drawing_utils.py  test.py  train.py  unet_model.py  unet_transforms.py  utils.py
